--- a/src/styles/base.css
+++ b/src/styles/base.css
@@ -59,7 +59,9 @@
     prose-th:border-skin-line prose-td:border
     prose-td:border-skin-line prose-img:mx-auto
     prose-img:!mt-2 prose-img:border-2
-    prose-img:border-skin-line prose-hr:!border-skin-line;
+    prose-img:border-skin-line prose-hr:!border-skin-line
+    prose-img:!mx-0 prose-img:!ml-0 prose-img:!mr-0
+    ;
   }
   .prose a {
     @apply hover:!text-skin-accent;
